--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <header>
-        <div class="large-font">Code Quiz</div>
+        <div class="large-font">Government Quiz</div>
         <div class="score" id="'score">
           Your Score: <span id="score"></span>/5
         </div>
@@ -28,7 +28,7 @@
 
         <div id="end-screen" class="hide">
           <div>
-            <ul id="scoresList"></ul>
+            <ul id="thanks"></ul>
           </div>
         </div>
       </div>
